# pqc

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.circleci/: config.yml
.cmake/: common.mk  libstd-memcheck.mk  libstd-memory_sanitizer.mk
.github/workflows/: main.yml
buid.dbg/: .drone.yml
public/pqc/: pqc.h
src/capi/: pqapi.c  pqapi.h  schemes.h
src/common/: Makefile  ct_check.h  fips202.c  fips202.h  randombytes.c  randombytes.h  speed_print.h  utils.c  utils.h
src/hash/sha2/: CMakeLists.txt  internal.h  sha2.c  sha2.h  sha2_w32.c
src/kem/frodo/frodokem1344shake/clean/: CMakeLists.txt  matrix_shake.c
src/kem/frodo/frodokem640shake/clean/: CMakeLists.txt  kem.c  matrix_shake.c  util.c
src/kem/frodo/frodokem976shake/clean/: CMakeLists.txt  matrix_shake.c
src/kem/hqc/hqc-rmrs-128/avx2/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/hqc/hqc-rmrs-128/clean/: CMakeLists.txt  kem.c
src/kem/hqc/hqc-rmrs-128/portable/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/hqc/hqc-rmrs-192/avx2/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/hqc/hqc-rmrs-192/clean/: CMakeLists.txt  kem.c
src/kem/hqc/hqc-rmrs-192/portable/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/hqc/hqc-rmrs-256/avx2/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/hqc/hqc-rmrs-256/clean/: CMakeLists.txt  kem.c
src/kem/hqc/hqc-rmrs-256/portable/: CMakeLists.txt  api.h  code.c  code.h  fft.c  fft.h  gf.c  gf.h  gf2x.c  gf2x.h  hqc.c  hqc.h  kem.c  parameters.h  parsing.c  parsing.h  reed_muller.c  reed_muller.h  reed_solomon.c  reed_solomon.h  vector.c  vector.h
src/kem/kyber/common/: reduce.c  reduce.h
src/kem/kyber/kyber1024/avx2/: CMakeLists.txt
src/kem/kyber/kyber1024/clean/: CMakeLists.txt  ntt.c  poly.c
src/kem/kyber/kyber512/avx2/: CMakeLists.txt  indcpa.c  kem.c  polyvec.c
src/kem/kyber/kyber512/clean/: CMakeLists.txt  ntt.c  poly.c
src/kem/kyber/kyber768/avx2/: CMakeLists.txt
src/kem/kyber/kyber768/clean/: CMakeLists.txt  ntt.c  poly.c
src/kem/mceliece/mceliece348864/clean/: CMakeLists.txt
src/kem/mceliece/mceliece348864f/clean/: CMakeLists.txt
src/kem/mceliece/mceliece460896/clean/: CMakeLists.txt
src/kem/mceliece/mceliece460896f/clean/: CMakeLists.txt
src/kem/mceliece/mceliece6688128/clean/: CMakeLists.txt
src/kem/mceliece/mceliece6688128f/clean/: CMakeLists.txt
src/kem/mceliece/mceliece6960119/clean/: CMakeLists.txt
src/kem/mceliece/mceliece6960119f/clean/: CMakeLists.txt
src/kem/mceliece/mceliece8192128/clean/: CMakeLists.txt
src/kem/mceliece/mceliece8192128f/clean/: CMakeLists.txt
src/kem/ntru/ntruhps2048509/avx2/: CMakeLists.txt
src/kem/ntru/ntruhps2048509/clean/: CMakeLists.txt
src/kem/ntru/ntruhps2048677/avx2/: CMakeLists.txt
src/kem/ntru/ntruhps2048677/clean/: CMakeLists.txt
src/kem/ntru/ntruhps4096821/avx2/: CMakeLists.txt
src/kem/ntru/ntruhps4096821/clean/: CMakeLists.txt
src/kem/ntru/ntruhrss701/avx2/: CMakeLists.txt
src/kem/ntru/ntruhrss701/clean/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr653/avx2/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr653/clean/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr761/avx2/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr761/clean/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr857/avx2/: CMakeLists.txt
src/kem/ntru_prime/ntrulpr857/clean/: CMakeLists.txt
src/kem/saber/firesaber/avx2/: CMakeLists.txt
src/kem/saber/firesaber/clean/: CMakeLists.txt
src/kem/saber/lightsaber/avx2/: CMakeLists.txt
src/kem/saber/lightsaber/clean/: CMakeLists.txt
src/kem/saber/saber/avx2/: CMakeLists.txt
src/kem/saber/saber/clean/: CMakeLists.txt
src/kem/sike/: CMakeLists.txt
src/kem/sike/includes/sike/: sike.h
src/kem/sike/p434/: fp-x86_64.S  fp_generic.c  fp_glue.c  fpx.c  fpx.h  isogeny.c  sike.c  utils.h
src/rustapi/pqc-sys/: Cargo.toml
src/rustapi/pqc-sys/src/: bindings.rs  build.rs
src/sign/dilithium/: sampling.c  sampling.h
src/sign/dilithium/dilithium2/avx2/: CMakeLists.txt
src/sign/dilithium/dilithium2/clean/: CMakeLists.txt  poly.c  sign.c
src/sign/dilithium/dilithium3/avx2/: CMakeLists.txt
src/sign/dilithium/dilithium3/clean/: CMakeLists.txt
src/sign/dilithium/dilithium5/avx2/: CMakeLists.txt
src/sign/dilithium/dilithium5/clean/: CMakeLists.txt
src/sign/falcon/: CMakeLists.txt  api.c  api.h  codec.c  common.c  falcon.c  fft.c  fpr.c  fpr.h  inner.h  keygen.c  rng.c  sign.c  vrfy.c
src/sign/falcon/falcon-1024/avx2/: CMakeLists.txt
src/sign/falcon/falcon-1024/clean/: CMakeLists.txt
src/sign/falcon/falcon-512/avx2/: CMakeLists.txt
src/sign/falcon/falcon-512/clean/: CMakeLists.txt
src/sign/rainbow/rainbowI-classic/clean/: CMakeLists.txt
src/sign/rainbow/rainbowIII-classic/clean/: CMakeLists.txt
src/sign/rainbow/rainbowV-classic/clean/: CMakeLists.txt
src/sign/sphincs/: 0001-Update-SPHINCS-parameters.patch
src/sign/sphincs/sphincs-sha256-128f-robust/avx2/: CMakeLists.txt
src/sign/sphincs/sphincs-sha256-128f-robust/clean/: CMakeLists.txt
test/: ct.cpp  mytest.cpp  ut.cpp
test/bench/: CMakeLists.txt  frodo.cc  kyber.cc  main.cc  sphincs.cc
test/katrunner/: Cargo.toml
test/katrunner/src/: drbg.rs  main.rs
(+46 files in other folders)
