[package]
name = "katrunner"
version = "0.1.0"
authors = ["Kris Kwiatkowski <contact@amongbytes.com>"]
edition = "2018"

[dependencies]
katwalk = "0.0.10"
pqc-sys = { path = "../../src/rustapi/pqc-sys" }
hex = "0.4.2"
threadpool = "1.8.1"
rust-crypto = "^0.4"
lazy_static = "1.4.0"
aes_ctr_drbg = "0.0.2"
